Fixed listEntry text overflow

--- a/src/components/sidebar/list/listEntry/listEntry.module.css
+++ b/src/components/sidebar/list/listEntry/listEntry.module.css
@@ -11,6 +11,9 @@
 
 .label {
   font-size: 1rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .delete-button {
